// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PDFLink component DownloadIcon component matches snapshot 1`] = `
<Component>
  <div
    className="download"
  >
    <Download
      color="currentColor"
      size="24"
    >
      <svg
        fill="none"
        height="24"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
        />
        <polyline
          points="7 10 12 15 17 10"
        />
        <line
          x1="12"
          x2="12"
          y1="15"
          y2="3"
        />
      </svg>
    </Download>
    <p>
      Download PDF
    </p>
    <style
      jsx={true}
    >
      
      .download {
        font-family: 'PT Sans Caption', sans-serif;
        display: flex;
        flex-direction: column;
        align-items: center;
      }

      p {
        margin-top: 0.5em;
      }
    
    </style>
  </div>
</Component>
`;

exports[`PDFLink component matches snapshot 1`] = `
<div>
  <Component
    document={
      <DOCUMENT>
        <PAGE
          style={
            Object {
              "backgroundColor": "white",
              "padding": 10,
              "paddingBottom": 60,
              "paddingTop": 30,
            }
          }
          wrap={true}
        >
          <Unknown
            text="English Language Arts Performance Task Specification: Grade 3 Informational Writing"
          />
          <VIEW
            style={
              Object {
                "display": "flex",
              }
            }
            wrap={true}
          >
            <Description
              claim={
                Object {
                  "claimNumber": "Informational Writing",
                  "description": "This is a test claim description",
                  "grades": Array [
                    "3",
                  ],
                  "shortCode": "E.G3.Informational Writing",
                  "subject": "English Language Arts",
                  "target": Array [
                    Object {
                      "DOK": Array [
                        Object {
                          "dokCode": "W-DOK4",
                          "dokDesc": "Higher-level thinking is central to Level 4. The standard at this level is a multi- paragraph composition that demonstrates synthesis and analysis of complex ideas or themes.",
                          "dokShort": "Level 4: Extended Thinking",
                        },
                      ],
                      "accessibility": "Students will be required to read short and long stimuli, interpret information from text and/or graphic sources, and use a mouse. Students with physical impairments may need to use an adapted mouse or a computer with eye- scanning capabilities. Students who are visually impaired or blind may need enlarged or brailled text and picture descriptions of art. Illustrations that need to be interpreted will need to have detailed written descriptions in order for them to be accessible for students who are blind. Students with reading disabilities may need to read the text to themselves, or use trackers or maskers to follow along. Students with visual-processing impairments may benefit from using a tracker or masker when reading. Other formats or supports may be necessary for students with other disabilities. The accommodations listed here are suggestions and could be altered depending on what accommodations will be allowable. Refer to the *Smarter Balanced Assessment Consortium: Usability, Accessibility, and Accommodations Guidelines* for information on accessibility concerns.",
                      "clarification": "-   Performance Task (PT): In general, the PT should allow students to demonstrate deeper thinking and allow more integration of information from resources. Sources should cover the subject sufficiently enough to allow students to develop a main idea, but not be too general.

-   Choosing Sources: Overall, the sources should offer more factual information and citations than just unsupported opinions. Stories or other works of fiction are not appropriate for the Grade 3–5 research tasks. Do not use literary fiction in the Grade 3-5 tasks.

-   Each performance task (PT) should be as unique as possible. Within a PT set, stimuli may, however, be used in more than one PT if necessary and important to the task. This must be done cautiously and to a limited extent only. There should be different companion stimuli and, in addition, the two PTs must not have the same focus. Choose sources with writing assignment in mind. Think about writing assignment and whether sources provide enough information for an appropriate informational full write. Try not to create a writing assignment around a set of sources – the writing purpose **should come from the sources** and not be a forced fit.

-   Claim 4 Targets: Target 2 will focus on choosing text and visual elements that support a research central idea, key detail, and/or given purpose as well as the integration of notes into a central idea or key detail category. Target 3 will focus on analyzing sources in order to locate additional information, such as relevant sources of information and relevant information from visual elements that will enhance an existing piece of student writing. Target 4 will focus on using/selecting evidence to support an opinion or an idea.

-   Research Questions: The three research questions must represent at least two different Claim 4 targets. Within a PT set, an item task model for a research question (RQ) can be used across PTs.",
                      "complexity": "PT stimuli should follow the guidelines in the stimulus specifications document: *Smarter Balanced Assessment Consortium: English Language Arts & Literacy Computer Adaptive Test (CAT) and Performance Task (PT) Stimulus*; however, the complexity of the stimuli, taken as a whole, should be at approximately the lower end of the target grade level. The vocabulary used in the stimulus and the item should be on or below grade level. In some instances, vocabulary may be above grade level as long as the stimulus has sufficient context to support the meaning of the word. In other cases, a complex authentic source that is at a reading level above the target grade (i.e., a historical primary source document) may be included, but these should be used with caution and with appropriate supports (e.g., historical context, definitions of key terms).",
                      "description": "this is a description",
                      "devNotes": "When there is more than one DOK listed, DOK 3 is for machine-scored items and DOK 4 is for short-text items.",
                      "dualText": "NA",
                      "evidence": Array [
                        Object {
                          "evDesc": "The student will locate information from multiple sources to support a central idea or key detail related to research.",
                          "evTitle": "Evidence 1",
                        },
                        Object {
                          "evDesc": "The student will interpret information from multiple sources to support a given purpose related to research tasks.",
                          "evTitle": "Evidence 2",
                        },
                        Object {
                          "evDesc": "The student will interpret information from a visual source to support a given purpose related to research tasks.",
                          "evTitle": "Evidence 3",
                        },
                        Object {
                          "evDesc": "The student will analyze digital and print sources in order to locate relevant information to support research.",
                          "evTitle": "Evidence 1",
                        },
                        Object {
                          "evDesc": "The student will analyze illustrations in order to locate relevant information to support research.",
                          "evTitle": "Evidence 2",
                        },
                        Object {
                          "evDesc": "The student will select evidence to support opinions or ideas based on evidence collected.",
                          "evTitle": "Evidence 1",
                        },
                        Object {
                          "evDesc": "The student will write full informational texts on a topic using a complete writing process attending to purpose and audience: organize ideas by stating a focus (main idea); include text structures and appropriate transitional strategies for coherence; include elaboration and supporting evidence from sources and an appropriate conclusion.",
                          "evTitle": "Evidence 1",
                        },
                      ],
                      "heading": "Item Writing and Scoring Guidelines",
                      "interactionType": "PT",
                      "rubrics": Array [],
                      "shortCode": "E.G3.C2WI.T4",
                      "standards": Array [
                        Object {
                          "stdCode": "E.G3.C1RI.T8.RI.3.1",
                          "stdDesc": "Ask and answer questions to demonstrate understanding of a text, referring explicitly to the text as the basis for the answers.",
                        },
                        Object {
                          "stdCode": "E.G3.C1RI.T8.RI.3.7",
                          "stdDesc": "Use information gained from illustrations (e.g., maps, photographs) and the words in a text to demonstrate understanding of the text (e.g., where, when, why, and how key events occur).",
                        },
                        Object {
                          "stdCode": "E.G3.C1RI.T11.RI.3.6",
                          "stdDesc": "Distinguish their own point of view from that of the author of a text.",
                        },
                        Object {
                          "stdCode": "E.G3.C1RI.T11.RI.3.9",
                          "stdDesc": "Compare and contrast the most important points and key details presented in two texts on the same topic.",
                        },
                        Object {
                          "stdCode": "E.G3.C2WN.T2.W.3.4",
                          "stdDesc": "With guidance and support from adults, produce writing in which the development and organization are appropriate to task, purpose, and audience.",
                        },
                        Object {
                          "stdCode": "E.G3.C2WN.T2.W.3.5",
                          "stdDesc": "With guidance and support from peers and adults, develop and strengthen writing as needed by planning, revising, and editing.",
                        },
                        Object {
                          "stdCode": "E.G3.C2WN.T2.W.3.8",
                          "stdDesc": "Recall information from experiences or gather information from print and digital sources; take brief notes on sources and sort evidence into provided categories.",
                        },
                        Object {
                          "stdCode": "E.G3.C2WI.T3a.W.3.2a",
                          "stdDesc": "Introduce a topic and group related information together; include illustrations, when useful to aiding comprehension.",
                        },
                        Object {
                          "stdCode": "E.G3.C2WI.T3a.W.3.2b",
                          "stdDesc": "Develop the topic with facts, definitions, and details.",
                        },
                        Object {
                          "stdCode": "E.G3.C2WI.T3a.W.3.2c",
                          "stdDesc": "Use linking words and phrases (e.g., *also, another, and, more, but*) to connect ideas within categories of information.",
                        },
                        Object {
                          "stdCode": "E.G3.C2WI.T3a.W.3.2d",
                          "stdDesc": "Provide a concluding statement or section.",
                        },
                        Object {
                          "stdCode": "E.G3.C2WO.T6a.W.3.1b",
                          "stdDesc": "Provide reasons that support the opinion.",
                        },
                      ],
                      "stem": Array [
                        Object {
                          "shortStem": "Appropriate Stems",
                          "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus

**Stems:**
-   Source \\\\#1 discusses &#60topic&#62 . Explain how the information in Source \\\\#2 adds to the reader’s understanding of &#60topic&#62 . Give **two** [details/examples] from Source \\\\#2 to support your explanation.

-   The sources discuss &#60topic&#62 . Explain what the sources say about &#60topic&#62 . Use **one** detail from each source to support your explanation. For each detail, include the source title or number.",
                        },
                        Object {
                          "shortStem": "Appropriate Stems",
                          "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** G3.T2. Excerpt from one of the Sources 

**Stems:**
-   Source \\\\#1 says &#60quote&#62 . Click on [**one**/**two**] sentence(s) in Source \\\\#2 below that **best** [supports/support] this [idea/detail].

**Clarifications:** The stem should appear above the text not after it.",
                        },
                        Object {
                          "shortStem": "Appropriate Stems",
                          "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus 

**Stems:**
-   Source \\\\#1 includes an illustration. Explain how this illustration would be helpful if it were added to Source \\\\#2. Give **two** [details/examples] from Source \\\\#2 to support your explanation.

-   Both sources discuss &#60topic&#62 . What does Source \\\\#1 explain about &#60topic&#62  that Source \\\\#2 does not? Explain why that information is helpful for the reader. Give **two** [details/examples] from Source \\\\#1 to support your explanation.",
                        },
                        Object {
                          "shortStem": "Appropriate Stems",
                          "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus 

**Stems:**
-   Source \\\\#1 gives information about &#60topic&#62 . Choose **two** [facts/ideas/details] from Source \\\\#2 that give **different** information about &#60topic&#62 .

-   Choose **two** [details/ideas] that explain what **both** Source \\\\#1 and Source \\\\#2 say about &#60topic&#62 .

-   Source \\\\#1 says &#60quote&#62 . Click on **two** details from Source \\\\#2 that give **different** information about &#60topic of quote&#62 .",
                        },
                        Object {
                          "shortStem": "Appropriate Stems",
                          "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus 

**Stems:**
-   Which source has **more** helpful information in understanding &#60idea/process&#62? Explain why this source has **more** helpful information in understanding &#60idea/process&#62. Support your explanation with **two** [details/examples] from the source.

-   Which source has **more** useful information about &#60topic&#62 ? Explain why this source has **more** useful information about &#60topic&#62 . Support your explanation with **two** [details/examples] from the source.",
                        },
                        Object {
                          "shortStem": "Appropriate Stems",
                          "stemDesc": "**Lead-in**: No lead-in

**Stimulus**: No additional stimulus 

**Stem**:
- Which source has more useful information about &#60topic&#62? Choose one answer that gives the source number and correctly explains why this is the more useful source.",
                        },
                        Object {
                          "shortStem": "Appropriate Stems",
                          "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus 

**Stem:**
-  Source #1 has an illustration. What information from the illustration is the most useful in understanding the &#60process/idea&#62 in Source #2? Explain why this information is the most useful in understanding  &#60process/idea&#62. Support your explanation with two [details/examples] from Source #2.",
                        },
                        Object {
                          "shortStem": "Appropriate Stems",
                          "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** G3.T3. Excerpt from one of the Sources 

**Stem**:
-	Source #2 has an illustration. Click on the **two** details in the sentences from Source #1 below that are **best** explained by the illustration in Source #2.

**Clarifications**: The stem should appear above the excerpt, not after it.",
                        },
                        Object {
                          "shortStem": "Appropriate Stems",
                          "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus 

**Stems:**
- Explain [why/how] &#60idea/opinion&#62. Give two [reasons/details/examples], one [reason/detail/example] from Source #1 and one [reason/detail/example] from Source #2 to support your explanation. For each [reason/detail/example], include the source title or number.

- Explain what would happen if &#60possible effect from cause discussed in sources&#62. Give two [details/examples], one [detail/example] from Source #1 and one [detail/example] from Source #2, to support your explanation. For each [detail/example], include the source title or number.

-	Each source explains &#60topic/information&#62. Explain why this [topic/information] is important. Give two examples, one example from Source #1 and one example from Source #2, to support your answer. For each example, include the source title or number.",
                        },
                        Object {
                          "shortStem": "Appropriate Stems",
                          "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus 

**Stems:**

-   Click on the boxes to match each source with the [idea/opinion] that it supports. Some [ideas/opinions] may have more than one source selected.

   **Example of Formatting:**

|   | Source #1: [title] |  Source #2: [title] |
|---|--------|--------|
| [idea/opinion] _____________   |  |   |
| [idea/opinion] _____________   |  |   |
 $~$ 

 
-   Look at the [ideas/opinions] in the table. Decide if the information in Source \\\\#1, Source \\\\#2, both sources, or neither source supports each [idea/opinion]. Click on the box to match the source that supports each [idea/opinion]. There will be only one box selected for each [idea/opinion].

**Example of Formatting:**



|  |  Source #1: [title] |  Source #2: [title] |  Both  |  Neither  | 
|------------------|---|---|---|---|
| [idea/opinion] |   |   |   |   |  
| [idea/opinion] |   |   |   |   |  
| [idea/opinion] |   |   |   |   |  
$~$

**Clarifications:** Matching tables should have no more than three correct answers at this grade level. If there are too many defensible options (check every possibility) do not use this item type, use multiple-choice.",
                        },
                        Object {
                          "shortStem": "Appropriate Stems",
                          "stemDesc": "NA",
                        },
                      ],
                      "stimInfo": "**Informational and literary nonfiction texts:** Includes the subgenres of articles, essays, memoirs, speeches, interviews, primary and secondary accounts, how-to articles, and functional reading.

-   Stimuli should include information about the sources (including in-text citations for opinions) that aids the student in assessing the relevance or usefulness of the information presented in the sources.

-   Stimuli should be presented as a set of sources that students might authentically find through a search, in alignment with the context of the writing assignment. Stimuli for research (two for Grade 3) should have some references and footnotes/in-text citations resembling authentic research sources.

-   The set of sources should provide enough evidence that allows students to establish and support a main idea, rather than simply restating the ideas within the sources. Sources should not be encyclopedic or too general.

-   The set of sources should together provide a comprehensive and richer collection of information than any one source alone and should encourage integration of information. Sources need some overlap of ideas to allow for analysis across texts.

-   Overall, the sources should offer more factual information and citations than just unsupported opinions.

**Literary fiction texts:** Includes the subgenres of narrative fiction, short stories, poetry, and song lyrics.

-   Stories or other works of fiction are not appropriate for the Grade 3–5 research tasks. Do not use literary fiction in Grade 3–5 tasks.

**Visual/graphic sources:** Includes the subgenres of data tables and graphs, maps, info-graphics, timelines, diagrams, photographs, drawings, and artwork.

-   In any set of textual stimuli for research, visual/graphic sources that are included within the stimuli must serve a purpose other than to simply break up the text (e.g., making an abstract concept, idea, or process described in the source more understandable, providing additional information relevant to understanding the topic or subtopic). They should be highly relevant to the topic or subtopic of the source, and not introduce distracting or irrelevant information.

-   Visuals should not be so complicated that they add to the reading load.

-   Care should be taken in the selection of visual/graphic sources in consideration of accessibility issues for students with visual impairments. However, not ALL tasks must be accessible for visually impaired students.

-   For Grade 3 Performance Tasks, where there are only 2 sources, visuals may be included *within* the sources as delineated in bullets above.",
                      "taskModels": Array [
                        Object {
                          "examples": "Scoring Rules",
                          "relatedEvidence": Array [],
                          "stimulus": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus

**Stems:**
-   Source \\\\#1 discusses &#60topic&#62 . Explain how the information in Source \\\\#2 adds to the reader’s understanding of &#60topic&#62 . Give **two** [details/examples] from Source \\\\#2 to support your explanation.

-   The sources discuss &#60topic&#62 . Explain what the sources say about &#60topic&#62 . Use **one** detail from each source to support your explanation. For each detail, include the source title or number.",
                          "taskDesc": "NA",
                          "taskName": "Task Model 1",
                        },
                        Object {
                          "examples": "Stimulus Information",
                          "relatedEvidence": Array [],
                          "stimulus": "**Lead-in:** No lead-in

**Stimulus:** G3.T2. Excerpt from one of the Sources 

**Stems:**
-   Source \\\\#1 says &#60quote&#62 . Click on [**one**/**two**] sentence(s) in Source \\\\#2 below that **best** [supports/support] this [idea/detail].

**Clarifications:** The stem should appear above the text not after it.",
                          "taskDesc": "The student will locate sentences that present supporting information for the source quote given in the stem.

The **delimited text** should be an excerpt from one of the sources. There should be six sentences that are delimited; however, regardless of the number of answer options and correct responses, the correct responses must equal less than half of the total answer options.

The **correct answer choice(s)** should be sentences that clearly provide supporting information for the quote given in the stem. If there are too many defensible options (check every possibility) do not use this item type, use multiple-choice.

**Distractors** are the delimited sentences that should reflect common student errors. Plausible distractors for this model might include: 1) a sentence that is on topic but does not present supporting information for the source quote found in the stem and/or 2) a sentence that contains the same wording as the source quote given in the stem but does not present supporting information.

**Rationales** should state the justification for why the plausible distractor is incorrect. Provide rationales for all distractors in the delimited text.",
                          "taskName": "Task Model 2",
                        },
                      ],
                      "title": "English Language Arts Performance Task Specification: Grade 3 Informational Writing",
                      "tools": "Word processing tools, including spell check",
                      "vocab": "this is a vocab",
                    },
                  ],
                  "title": "English Language Arts Performance Task Specification: Grade 3 Informational Writing",
                }
              }
            />
            <Overview
              claim={
                Object {
                  "claimNumber": "Informational Writing",
                  "description": "This is a test claim description",
                  "grades": Array [
                    "3",
                  ],
                  "shortCode": "E.G3.Informational Writing",
                  "subject": "English Language Arts",
                  "target": Array [
                    Object {
                      "DOK": Array [
                        Object {
                          "dokCode": "W-DOK4",
                          "dokDesc": "Higher-level thinking is central to Level 4. The standard at this level is a multi- paragraph composition that demonstrates synthesis and analysis of complex ideas or themes.",
                          "dokShort": "Level 4: Extended Thinking",
                        },
                      ],
                      "accessibility": "Students will be required to read short and long stimuli, interpret information from text and/or graphic sources, and use a mouse. Students with physical impairments may need to use an adapted mouse or a computer with eye- scanning capabilities. Students who are visually impaired or blind may need enlarged or brailled text and picture descriptions of art. Illustrations that need to be interpreted will need to have detailed written descriptions in order for them to be accessible for students who are blind. Students with reading disabilities may need to read the text to themselves, or use trackers or maskers to follow along. Students with visual-processing impairments may benefit from using a tracker or masker when reading. Other formats or supports may be necessary for students with other disabilities. The accommodations listed here are suggestions and could be altered depending on what accommodations will be allowable. Refer to the *Smarter Balanced Assessment Consortium: Usability, Accessibility, and Accommodations Guidelines* for information on accessibility concerns.",
                      "clarification": "-   Performance Task (PT): In general, the PT should allow students to demonstrate deeper thinking and allow more integration of information from resources. Sources should cover the subject sufficiently enough to allow students to develop a main idea, but not be too general.

-   Choosing Sources: Overall, the sources should offer more factual information and citations than just unsupported opinions. Stories or other works of fiction are not appropriate for the Grade 3–5 research tasks. Do not use literary fiction in the Grade 3-5 tasks.

-   Each performance task (PT) should be as unique as possible. Within a PT set, stimuli may, however, be used in more than one PT if necessary and important to the task. This must be done cautiously and to a limited extent only. There should be different companion stimuli and, in addition, the two PTs must not have the same focus. Choose sources with writing assignment in mind. Think about writing assignment and whether sources provide enough information for an appropriate informational full write. Try not to create a writing assignment around a set of sources – the writing purpose **should come from the sources** and not be a forced fit.

-   Claim 4 Targets: Target 2 will focus on choosing text and visual elements that support a research central idea, key detail, and/or given purpose as well as the integration of notes into a central idea or key detail category. Target 3 will focus on analyzing sources in order to locate additional information, such as relevant sources of information and relevant information from visual elements that will enhance an existing piece of student writing. Target 4 will focus on using/selecting evidence to support an opinion or an idea.

-   Research Questions: The three research questions must represent at least two different Claim 4 targets. Within a PT set, an item task model for a research question (RQ) can be used across PTs.",
                      "complexity": "PT stimuli should follow the guidelines in the stimulus specifications document: *Smarter Balanced Assessment Consortium: English Language Arts & Literacy Computer Adaptive Test (CAT) and Performance Task (PT) Stimulus*; however, the complexity of the stimuli, taken as a whole, should be at approximately the lower end of the target grade level. The vocabulary used in the stimulus and the item should be on or below grade level. In some instances, vocabulary may be above grade level as long as the stimulus has sufficient context to support the meaning of the word. In other cases, a complex authentic source that is at a reading level above the target grade (i.e., a historical primary source document) may be included, but these should be used with caution and with appropriate supports (e.g., historical context, definitions of key terms).",
                      "description": "this is a description",
                      "devNotes": "When there is more than one DOK listed, DOK 3 is for machine-scored items and DOK 4 is for short-text items.",
                      "dualText": "NA",
                      "evidence": Array [
                        Object {
                          "evDesc": "The student will locate information from multiple sources to support a central idea or key detail related to research.",
                          "evTitle": "Evidence 1",
                        },
                        Object {
                          "evDesc": "The student will interpret information from multiple sources to support a given purpose related to research tasks.",
                          "evTitle": "Evidence 2",
                        },
                        Object {
                          "evDesc": "The student will interpret information from a visual source to support a given purpose related to research tasks.",
                          "evTitle": "Evidence 3",
                        },
                        Object {
                          "evDesc": "The student will analyze digital and print sources in order to locate relevant information to support research.",
                          "evTitle": "Evidence 1",
                        },
                        Object {
                          "evDesc": "The student will analyze illustrations in order to locate relevant information to support research.",
                          "evTitle": "Evidence 2",
                        },
                        Object {
                          "evDesc": "The student will select evidence to support opinions or ideas based on evidence collected.",
                          "evTitle": "Evidence 1",
                        },
                        Object {
                          "evDesc": "The student will write full informational texts on a topic using a complete writing process attending to purpose and audience: organize ideas by stating a focus (main idea); include text structures and appropriate transitional strategies for coherence; include elaboration and supporting evidence from sources and an appropriate conclusion.",
                          "evTitle": "Evidence 1",
                        },
                      ],
                      "heading": "Item Writing and Scoring Guidelines",
                      "interactionType": "PT",
                      "rubrics": Array [],
                      "shortCode": "E.G3.C2WI.T4",
                      "standards": Array [
                        Object {
                          "stdCode": "E.G3.C1RI.T8.RI.3.1",
                          "stdDesc": "Ask and answer questions to demonstrate understanding of a text, referring explicitly to the text as the basis for the answers.",
                        },
                        Object {
                          "stdCode": "E.G3.C1RI.T8.RI.3.7",
                          "stdDesc": "Use information gained from illustrations (e.g., maps, photographs) and the words in a text to demonstrate understanding of the text (e.g., where, when, why, and how key events occur).",
                        },
                        Object {
                          "stdCode": "E.G3.C1RI.T11.RI.3.6",
                          "stdDesc": "Distinguish their own point of view from that of the author of a text.",
                        },
                        Object {
                          "stdCode": "E.G3.C1RI.T11.RI.3.9",
                          "stdDesc": "Compare and contrast the most important points and key details presented in two texts on the same topic.",
                        },
                        Object {
                          "stdCode": "E.G3.C2WN.T2.W.3.4",
                          "stdDesc": "With guidance and support from adults, produce writing in which the development and organization are appropriate to task, purpose, and audience.",
                        },
                        Object {
                          "stdCode": "E.G3.C2WN.T2.W.3.5",
                          "stdDesc": "With guidance and support from peers and adults, develop and strengthen writing as needed by planning, revising, and editing.",
                        },
                        Object {
                          "stdCode": "E.G3.C2WN.T2.W.3.8",
                          "stdDesc": "Recall information from experiences or gather information from print and digital sources; take brief notes on sources and sort evidence into provided categories.",
                        },
                        Object {
                          "stdCode": "E.G3.C2WI.T3a.W.3.2a",
                          "stdDesc": "Introduce a topic and group related information together; include illustrations, when useful to aiding comprehension.",
                        },
                        Object {
                          "stdCode": "E.G3.C2WI.T3a.W.3.2b",
                          "stdDesc": "Develop the topic with facts, definitions, and details.",
                        },
                        Object {
                          "stdCode": "E.G3.C2WI.T3a.W.3.2c",
                          "stdDesc": "Use linking words and phrases (e.g., *also, another, and, more, but*) to connect ideas within categories of information.",
                        },
                        Object {
                          "stdCode": "E.G3.C2WI.T3a.W.3.2d",
                          "stdDesc": "Provide a concluding statement or section.",
                        },
                        Object {
                          "stdCode": "E.G3.C2WO.T6a.W.3.1b",
                          "stdDesc": "Provide reasons that support the opinion.",
                        },
                      ],
                      "stem": Array [
                        Object {
                          "shortStem": "Appropriate Stems",
                          "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus

**Stems:**
-   Source \\\\#1 discusses &#60topic&#62 . Explain how the information in Source \\\\#2 adds to the reader’s understanding of &#60topic&#62 . Give **two** [details/examples] from Source \\\\#2 to support your explanation.

-   The sources discuss &#60topic&#62 . Explain what the sources say about &#60topic&#62 . Use **one** detail from each source to support your explanation. For each detail, include the source title or number.",
                        },
                        Object {
                          "shortStem": "Appropriate Stems",
                          "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** G3.T2. Excerpt from one of the Sources 

**Stems:**
-   Source \\\\#1 says &#60quote&#62 . Click on [**one**/**two**] sentence(s) in Source \\\\#2 below that **best** [supports/support] this [idea/detail].

**Clarifications:** The stem should appear above the text not after it.",
                        },
                        Object {
                          "shortStem": "Appropriate Stems",
                          "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus 

**Stems:**
-   Source \\\\#1 includes an illustration. Explain how this illustration would be helpful if it were added to Source \\\\#2. Give **two** [details/examples] from Source \\\\#2 to support your explanation.

-   Both sources discuss &#60topic&#62 . What does Source \\\\#1 explain about &#60topic&#62  that Source \\\\#2 does not? Explain why that information is helpful for the reader. Give **two** [details/examples] from Source \\\\#1 to support your explanation.",
                        },
                        Object {
                          "shortStem": "Appropriate Stems",
                          "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus 

**Stems:**
-   Source \\\\#1 gives information about &#60topic&#62 . Choose **two** [facts/ideas/details] from Source \\\\#2 that give **different** information about &#60topic&#62 .

-   Choose **two** [details/ideas] that explain what **both** Source \\\\#1 and Source \\\\#2 say about &#60topic&#62 .

-   Source \\\\#1 says &#60quote&#62 . Click on **two** details from Source \\\\#2 that give **different** information about &#60topic of quote&#62 .",
                        },
                        Object {
                          "shortStem": "Appropriate Stems",
                          "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus 

**Stems:**
-   Which source has **more** helpful information in understanding &#60idea/process&#62? Explain why this source has **more** helpful information in understanding &#60idea/process&#62. Support your explanation with **two** [details/examples] from the source.

-   Which source has **more** useful information about &#60topic&#62 ? Explain why this source has **more** useful information about &#60topic&#62 . Support your explanation with **two** [details/examples] from the source.",
                        },
                        Object {
                          "shortStem": "Appropriate Stems",
                          "stemDesc": "**Lead-in**: No lead-in

**Stimulus**: No additional stimulus 

**Stem**:
- Which source has more useful information about &#60topic&#62? Choose one answer that gives the source number and correctly explains why this is the more useful source.",
                        },
                        Object {
                          "shortStem": "Appropriate Stems",
                          "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus 

**Stem:**
-  Source #1 has an illustration. What information from the illustration is the most useful in understanding the &#60process/idea&#62 in Source #2? Explain why this information is the most useful in understanding  &#60process/idea&#62. Support your explanation with two [details/examples] from Source #2.",
                        },
                        Object {
                          "shortStem": "Appropriate Stems",
                          "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** G3.T3. Excerpt from one of the Sources 

**Stem**:
-	Source #2 has an illustration. Click on the **two** details in the sentences from Source #1 below that are **best** explained by the illustration in Source #2.

**Clarifications**: The stem should appear above the excerpt, not after it.",
                        },
                        Object {
                          "shortStem": "Appropriate Stems",
                          "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus 

**Stems:**
- Explain [why/how] &#60idea/opinion&#62. Give two [reasons/details/examples], one [reason/detail/example] from Source #1 and one [reason/detail/example] from Source #2 to support your explanation. For each [reason/detail/example], include the source title or number.

- Explain what would happen if &#60possible effect from cause discussed in sources&#62. Give two [details/examples], one [detail/example] from Source #1 and one [detail/example] from Source #2, to support your explanation. For each [detail/example], include the source title or number.

-	Each source explains &#60topic/information&#62. Explain why this [topic/information] is important. Give two examples, one example from Source #1 and one example from Source #2, to support your answer. For each example, include the source title or number.",
                        },
                        Object {
                          "shortStem": "Appropriate Stems",
                          "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus 

**Stems:**

-   Click on the boxes to match each source with the [idea/opinion] that it supports. Some [ideas/opinions] may have more than one source selected.

   **Example of Formatting:**

|   | Source #1: [title] |  Source #2: [title] |
|---|--------|--------|
| [idea/opinion] _____________   |  |   |
| [idea/opinion] _____________   |  |   |
 $~$ 

 
-   Look at the [ideas/opinions] in the table. Decide if the information in Source \\\\#1, Source \\\\#2, both sources, or neither source supports each [idea/opinion]. Click on the box to match the source that supports each [idea/opinion]. There will be only one box selected for each [idea/opinion].

**Example of Formatting:**



|  |  Source #1: [title] |  Source #2: [title] |  Both  |  Neither  | 
|------------------|---|---|---|---|
| [idea/opinion] |   |   |   |   |  
| [idea/opinion] |   |   |   |   |  
| [idea/opinion] |   |   |   |   |  
$~$

**Clarifications:** Matching tables should have no more than three correct answers at this grade level. If there are too many defensible options (check every possibility) do not use this item type, use multiple-choice.",
                        },
                        Object {
                          "shortStem": "Appropriate Stems",
                          "stemDesc": "NA",
                        },
                      ],
                      "stimInfo": "**Informational and literary nonfiction texts:** Includes the subgenres of articles, essays, memoirs, speeches, interviews, primary and secondary accounts, how-to articles, and functional reading.

-   Stimuli should include information about the sources (including in-text citations for opinions) that aids the student in assessing the relevance or usefulness of the information presented in the sources.

-   Stimuli should be presented as a set of sources that students might authentically find through a search, in alignment with the context of the writing assignment. Stimuli for research (two for Grade 3) should have some references and footnotes/in-text citations resembling authentic research sources.

-   The set of sources should provide enough evidence that allows students to establish and support a main idea, rather than simply restating the ideas within the sources. Sources should not be encyclopedic or too general.

-   The set of sources should together provide a comprehensive and richer collection of information than any one source alone and should encourage integration of information. Sources need some overlap of ideas to allow for analysis across texts.

-   Overall, the sources should offer more factual information and citations than just unsupported opinions.

**Literary fiction texts:** Includes the subgenres of narrative fiction, short stories, poetry, and song lyrics.

-   Stories or other works of fiction are not appropriate for the Grade 3–5 research tasks. Do not use literary fiction in Grade 3–5 tasks.

**Visual/graphic sources:** Includes the subgenres of data tables and graphs, maps, info-graphics, timelines, diagrams, photographs, drawings, and artwork.

-   In any set of textual stimuli for research, visual/graphic sources that are included within the stimuli must serve a purpose other than to simply break up the text (e.g., making an abstract concept, idea, or process described in the source more understandable, providing additional information relevant to understanding the topic or subtopic). They should be highly relevant to the topic or subtopic of the source, and not introduce distracting or irrelevant information.

-   Visuals should not be so complicated that they add to the reading load.

-   Care should be taken in the selection of visual/graphic sources in consideration of accessibility issues for students with visual impairments. However, not ALL tasks must be accessible for visually impaired students.

-   For Grade 3 Performance Tasks, where there are only 2 sources, visuals may be included *within* the sources as delineated in bullets above.",
                      "taskModels": Array [
                        Object {
                          "examples": "Scoring Rules",
                          "relatedEvidence": Array [],
                          "stimulus": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus

**Stems:**
-   Source \\\\#1 discusses &#60topic&#62 . Explain how the information in Source \\\\#2 adds to the reader’s understanding of &#60topic&#62 . Give **two** [details/examples] from Source \\\\#2 to support your explanation.

-   The sources discuss &#60topic&#62 . Explain what the sources say about &#60topic&#62 . Use **one** detail from each source to support your explanation. For each detail, include the source title or number.",
                          "taskDesc": "NA",
                          "taskName": "Task Model 1",
                        },
                        Object {
                          "examples": "Stimulus Information",
                          "relatedEvidence": Array [],
                          "stimulus": "**Lead-in:** No lead-in

**Stimulus:** G3.T2. Excerpt from one of the Sources 

**Stems:**
-   Source \\\\#1 says &#60quote&#62 . Click on [**one**/**two**] sentence(s) in Source \\\\#2 below that **best** [supports/support] this [idea/detail].

**Clarifications:** The stem should appear above the text not after it.",
                          "taskDesc": "The student will locate sentences that present supporting information for the source quote given in the stem.

The **delimited text** should be an excerpt from one of the sources. There should be six sentences that are delimited; however, regardless of the number of answer options and correct responses, the correct responses must equal less than half of the total answer options.

The **correct answer choice(s)** should be sentences that clearly provide supporting information for the quote given in the stem. If there are too many defensible options (check every possibility) do not use this item type, use multiple-choice.

**Distractors** are the delimited sentences that should reflect common student errors. Plausible distractors for this model might include: 1) a sentence that is on topic but does not present supporting information for the source quote found in the stem and/or 2) a sentence that contains the same wording as the source quote given in the stem but does not present supporting information.

**Rationales** should state the justification for why the plausible distractor is incorrect. Provide rationales for all distractors in the delimited text.",
                          "taskName": "Task Model 2",
                        },
                      ],
                      "title": "English Language Arts Performance Task Specification: Grade 3 Informational Writing",
                      "tools": "Word processing tools, including spell check",
                      "vocab": "this is a vocab",
                    },
                  ],
                  "title": "English Language Arts Performance Task Specification: Grade 3 Informational Writing",
                }
              }
            />
          </VIEW>
          <TEXT
            fixed={true}
            render={[Function]}
            style={
              Object {
                "bottom": 30,
                "color": "black",
                "fontSize": 12,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "textAlign": "center",
              }
            }
          />
        </PAGE>
        <Unknown
          claim={
            Object {
              "claimNumber": "Informational Writing",
              "description": "This is a test claim description",
              "grades": Array [
                "3",
              ],
              "shortCode": "E.G3.Informational Writing",
              "subject": "English Language Arts",
              "target": Array [
                Object {
                  "DOK": Array [
                    Object {
                      "dokCode": "W-DOK4",
                      "dokDesc": "Higher-level thinking is central to Level 4. The standard at this level is a multi- paragraph composition that demonstrates synthesis and analysis of complex ideas or themes.",
                      "dokShort": "Level 4: Extended Thinking",
                    },
                  ],
                  "accessibility": "Students will be required to read short and long stimuli, interpret information from text and/or graphic sources, and use a mouse. Students with physical impairments may need to use an adapted mouse or a computer with eye- scanning capabilities. Students who are visually impaired or blind may need enlarged or brailled text and picture descriptions of art. Illustrations that need to be interpreted will need to have detailed written descriptions in order for them to be accessible for students who are blind. Students with reading disabilities may need to read the text to themselves, or use trackers or maskers to follow along. Students with visual-processing impairments may benefit from using a tracker or masker when reading. Other formats or supports may be necessary for students with other disabilities. The accommodations listed here are suggestions and could be altered depending on what accommodations will be allowable. Refer to the *Smarter Balanced Assessment Consortium: Usability, Accessibility, and Accommodations Guidelines* for information on accessibility concerns.",
                  "clarification": "-   Performance Task (PT): In general, the PT should allow students to demonstrate deeper thinking and allow more integration of information from resources. Sources should cover the subject sufficiently enough to allow students to develop a main idea, but not be too general.

-   Choosing Sources: Overall, the sources should offer more factual information and citations than just unsupported opinions. Stories or other works of fiction are not appropriate for the Grade 3–5 research tasks. Do not use literary fiction in the Grade 3-5 tasks.

-   Each performance task (PT) should be as unique as possible. Within a PT set, stimuli may, however, be used in more than one PT if necessary and important to the task. This must be done cautiously and to a limited extent only. There should be different companion stimuli and, in addition, the two PTs must not have the same focus. Choose sources with writing assignment in mind. Think about writing assignment and whether sources provide enough information for an appropriate informational full write. Try not to create a writing assignment around a set of sources – the writing purpose **should come from the sources** and not be a forced fit.

-   Claim 4 Targets: Target 2 will focus on choosing text and visual elements that support a research central idea, key detail, and/or given purpose as well as the integration of notes into a central idea or key detail category. Target 3 will focus on analyzing sources in order to locate additional information, such as relevant sources of information and relevant information from visual elements that will enhance an existing piece of student writing. Target 4 will focus on using/selecting evidence to support an opinion or an idea.

-   Research Questions: The three research questions must represent at least two different Claim 4 targets. Within a PT set, an item task model for a research question (RQ) can be used across PTs.",
                  "complexity": "PT stimuli should follow the guidelines in the stimulus specifications document: *Smarter Balanced Assessment Consortium: English Language Arts & Literacy Computer Adaptive Test (CAT) and Performance Task (PT) Stimulus*; however, the complexity of the stimuli, taken as a whole, should be at approximately the lower end of the target grade level. The vocabulary used in the stimulus and the item should be on or below grade level. In some instances, vocabulary may be above grade level as long as the stimulus has sufficient context to support the meaning of the word. In other cases, a complex authentic source that is at a reading level above the target grade (i.e., a historical primary source document) may be included, but these should be used with caution and with appropriate supports (e.g., historical context, definitions of key terms).",
                  "description": "this is a description",
                  "devNotes": "When there is more than one DOK listed, DOK 3 is for machine-scored items and DOK 4 is for short-text items.",
                  "dualText": "NA",
                  "evidence": Array [
                    Object {
                      "evDesc": "The student will locate information from multiple sources to support a central idea or key detail related to research.",
                      "evTitle": "Evidence 1",
                    },
                    Object {
                      "evDesc": "The student will interpret information from multiple sources to support a given purpose related to research tasks.",
                      "evTitle": "Evidence 2",
                    },
                    Object {
                      "evDesc": "The student will interpret information from a visual source to support a given purpose related to research tasks.",
                      "evTitle": "Evidence 3",
                    },
                    Object {
                      "evDesc": "The student will analyze digital and print sources in order to locate relevant information to support research.",
                      "evTitle": "Evidence 1",
                    },
                    Object {
                      "evDesc": "The student will analyze illustrations in order to locate relevant information to support research.",
                      "evTitle": "Evidence 2",
                    },
                    Object {
                      "evDesc": "The student will select evidence to support opinions or ideas based on evidence collected.",
                      "evTitle": "Evidence 1",
                    },
                    Object {
                      "evDesc": "The student will write full informational texts on a topic using a complete writing process attending to purpose and audience: organize ideas by stating a focus (main idea); include text structures and appropriate transitional strategies for coherence; include elaboration and supporting evidence from sources and an appropriate conclusion.",
                      "evTitle": "Evidence 1",
                    },
                  ],
                  "heading": "Item Writing and Scoring Guidelines",
                  "interactionType": "PT",
                  "rubrics": Array [],
                  "shortCode": "E.G3.C2WI.T4",
                  "standards": Array [
                    Object {
                      "stdCode": "E.G3.C1RI.T8.RI.3.1",
                      "stdDesc": "Ask and answer questions to demonstrate understanding of a text, referring explicitly to the text as the basis for the answers.",
                    },
                    Object {
                      "stdCode": "E.G3.C1RI.T8.RI.3.7",
                      "stdDesc": "Use information gained from illustrations (e.g., maps, photographs) and the words in a text to demonstrate understanding of the text (e.g., where, when, why, and how key events occur).",
                    },
                    Object {
                      "stdCode": "E.G3.C1RI.T11.RI.3.6",
                      "stdDesc": "Distinguish their own point of view from that of the author of a text.",
                    },
                    Object {
                      "stdCode": "E.G3.C1RI.T11.RI.3.9",
                      "stdDesc": "Compare and contrast the most important points and key details presented in two texts on the same topic.",
                    },
                    Object {
                      "stdCode": "E.G3.C2WN.T2.W.3.4",
                      "stdDesc": "With guidance and support from adults, produce writing in which the development and organization are appropriate to task, purpose, and audience.",
                    },
                    Object {
                      "stdCode": "E.G3.C2WN.T2.W.3.5",
                      "stdDesc": "With guidance and support from peers and adults, develop and strengthen writing as needed by planning, revising, and editing.",
                    },
                    Object {
                      "stdCode": "E.G3.C2WN.T2.W.3.8",
                      "stdDesc": "Recall information from experiences or gather information from print and digital sources; take brief notes on sources and sort evidence into provided categories.",
                    },
                    Object {
                      "stdCode": "E.G3.C2WI.T3a.W.3.2a",
                      "stdDesc": "Introduce a topic and group related information together; include illustrations, when useful to aiding comprehension.",
                    },
                    Object {
                      "stdCode": "E.G3.C2WI.T3a.W.3.2b",
                      "stdDesc": "Develop the topic with facts, definitions, and details.",
                    },
                    Object {
                      "stdCode": "E.G3.C2WI.T3a.W.3.2c",
                      "stdDesc": "Use linking words and phrases (e.g., *also, another, and, more, but*) to connect ideas within categories of information.",
                    },
                    Object {
                      "stdCode": "E.G3.C2WI.T3a.W.3.2d",
                      "stdDesc": "Provide a concluding statement or section.",
                    },
                    Object {
                      "stdCode": "E.G3.C2WO.T6a.W.3.1b",
                      "stdDesc": "Provide reasons that support the opinion.",
                    },
                  ],
                  "stem": Array [
                    Object {
                      "shortStem": "Appropriate Stems",
                      "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus

**Stems:**
-   Source \\\\#1 discusses &#60topic&#62 . Explain how the information in Source \\\\#2 adds to the reader’s understanding of &#60topic&#62 . Give **two** [details/examples] from Source \\\\#2 to support your explanation.

-   The sources discuss &#60topic&#62 . Explain what the sources say about &#60topic&#62 . Use **one** detail from each source to support your explanation. For each detail, include the source title or number.",
                    },
                    Object {
                      "shortStem": "Appropriate Stems",
                      "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** G3.T2. Excerpt from one of the Sources 

**Stems:**
-   Source \\\\#1 says &#60quote&#62 . Click on [**one**/**two**] sentence(s) in Source \\\\#2 below that **best** [supports/support] this [idea/detail].

**Clarifications:** The stem should appear above the text not after it.",
                    },
                    Object {
                      "shortStem": "Appropriate Stems",
                      "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus 

**Stems:**
-   Source \\\\#1 includes an illustration. Explain how this illustration would be helpful if it were added to Source \\\\#2. Give **two** [details/examples] from Source \\\\#2 to support your explanation.

-   Both sources discuss &#60topic&#62 . What does Source \\\\#1 explain about &#60topic&#62  that Source \\\\#2 does not? Explain why that information is helpful for the reader. Give **two** [details/examples] from Source \\\\#1 to support your explanation.",
                    },
                    Object {
                      "shortStem": "Appropriate Stems",
                      "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus 

**Stems:**
-   Source \\\\#1 gives information about &#60topic&#62 . Choose **two** [facts/ideas/details] from Source \\\\#2 that give **different** information about &#60topic&#62 .

-   Choose **two** [details/ideas] that explain what **both** Source \\\\#1 and Source \\\\#2 say about &#60topic&#62 .

-   Source \\\\#1 says &#60quote&#62 . Click on **two** details from Source \\\\#2 that give **different** information about &#60topic of quote&#62 .",
                    },
                    Object {
                      "shortStem": "Appropriate Stems",
                      "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus 

**Stems:**
-   Which source has **more** helpful information in understanding &#60idea/process&#62? Explain why this source has **more** helpful information in understanding &#60idea/process&#62. Support your explanation with **two** [details/examples] from the source.

-   Which source has **more** useful information about &#60topic&#62 ? Explain why this source has **more** useful information about &#60topic&#62 . Support your explanation with **two** [details/examples] from the source.",
                    },
                    Object {
                      "shortStem": "Appropriate Stems",
                      "stemDesc": "**Lead-in**: No lead-in

**Stimulus**: No additional stimulus 

**Stem**:
- Which source has more useful information about &#60topic&#62? Choose one answer that gives the source number and correctly explains why this is the more useful source.",
                    },
                    Object {
                      "shortStem": "Appropriate Stems",
                      "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus 

**Stem:**
-  Source #1 has an illustration. What information from the illustration is the most useful in understanding the &#60process/idea&#62 in Source #2? Explain why this information is the most useful in understanding  &#60process/idea&#62. Support your explanation with two [details/examples] from Source #2.",
                    },
                    Object {
                      "shortStem": "Appropriate Stems",
                      "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** G3.T3. Excerpt from one of the Sources 

**Stem**:
-	Source #2 has an illustration. Click on the **two** details in the sentences from Source #1 below that are **best** explained by the illustration in Source #2.

**Clarifications**: The stem should appear above the excerpt, not after it.",
                    },
                    Object {
                      "shortStem": "Appropriate Stems",
                      "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus 

**Stems:**
- Explain [why/how] &#60idea/opinion&#62. Give two [reasons/details/examples], one [reason/detail/example] from Source #1 and one [reason/detail/example] from Source #2 to support your explanation. For each [reason/detail/example], include the source title or number.

- Explain what would happen if &#60possible effect from cause discussed in sources&#62. Give two [details/examples], one [detail/example] from Source #1 and one [detail/example] from Source #2, to support your explanation. For each [detail/example], include the source title or number.

-	Each source explains &#60topic/information&#62. Explain why this [topic/information] is important. Give two examples, one example from Source #1 and one example from Source #2, to support your answer. For each example, include the source title or number.",
                    },
                    Object {
                      "shortStem": "Appropriate Stems",
                      "stemDesc": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus 

**Stems:**

-   Click on the boxes to match each source with the [idea/opinion] that it supports. Some [ideas/opinions] may have more than one source selected.

   **Example of Formatting:**

|   | Source #1: [title] |  Source #2: [title] |
|---|--------|--------|
| [idea/opinion] _____________   |  |   |
| [idea/opinion] _____________   |  |   |
 $~$ 

 
-   Look at the [ideas/opinions] in the table. Decide if the information in Source \\\\#1, Source \\\\#2, both sources, or neither source supports each [idea/opinion]. Click on the box to match the source that supports each [idea/opinion]. There will be only one box selected for each [idea/opinion].

**Example of Formatting:**



|  |  Source #1: [title] |  Source #2: [title] |  Both  |  Neither  | 
|------------------|---|---|---|---|
| [idea/opinion] |   |   |   |   |  
| [idea/opinion] |   |   |   |   |  
| [idea/opinion] |   |   |   |   |  
$~$

**Clarifications:** Matching tables should have no more than three correct answers at this grade level. If there are too many defensible options (check every possibility) do not use this item type, use multiple-choice.",
                    },
                    Object {
                      "shortStem": "Appropriate Stems",
                      "stemDesc": "NA",
                    },
                  ],
                  "stimInfo": "**Informational and literary nonfiction texts:** Includes the subgenres of articles, essays, memoirs, speeches, interviews, primary and secondary accounts, how-to articles, and functional reading.

-   Stimuli should include information about the sources (including in-text citations for opinions) that aids the student in assessing the relevance or usefulness of the information presented in the sources.

-   Stimuli should be presented as a set of sources that students might authentically find through a search, in alignment with the context of the writing assignment. Stimuli for research (two for Grade 3) should have some references and footnotes/in-text citations resembling authentic research sources.

-   The set of sources should provide enough evidence that allows students to establish and support a main idea, rather than simply restating the ideas within the sources. Sources should not be encyclopedic or too general.

-   The set of sources should together provide a comprehensive and richer collection of information than any one source alone and should encourage integration of information. Sources need some overlap of ideas to allow for analysis across texts.

-   Overall, the sources should offer more factual information and citations than just unsupported opinions.

**Literary fiction texts:** Includes the subgenres of narrative fiction, short stories, poetry, and song lyrics.

-   Stories or other works of fiction are not appropriate for the Grade 3–5 research tasks. Do not use literary fiction in Grade 3–5 tasks.

**Visual/graphic sources:** Includes the subgenres of data tables and graphs, maps, info-graphics, timelines, diagrams, photographs, drawings, and artwork.

-   In any set of textual stimuli for research, visual/graphic sources that are included within the stimuli must serve a purpose other than to simply break up the text (e.g., making an abstract concept, idea, or process described in the source more understandable, providing additional information relevant to understanding the topic or subtopic). They should be highly relevant to the topic or subtopic of the source, and not introduce distracting or irrelevant information.

-   Visuals should not be so complicated that they add to the reading load.

-   Care should be taken in the selection of visual/graphic sources in consideration of accessibility issues for students with visual impairments. However, not ALL tasks must be accessible for visually impaired students.

-   For Grade 3 Performance Tasks, where there are only 2 sources, visuals may be included *within* the sources as delineated in bullets above.",
                  "taskModels": Array [
                    Object {
                      "examples": "Scoring Rules",
                      "relatedEvidence": Array [],
                      "stimulus": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus

**Stems:**
-   Source \\\\#1 discusses &#60topic&#62 . Explain how the information in Source \\\\#2 adds to the reader’s understanding of &#60topic&#62 . Give **two** [details/examples] from Source \\\\#2 to support your explanation.

-   The sources discuss &#60topic&#62 . Explain what the sources say about &#60topic&#62 . Use **one** detail from each source to support your explanation. For each detail, include the source title or number.",
                      "taskDesc": "NA",
                      "taskName": "Task Model 1",
                    },
                    Object {
                      "examples": "Stimulus Information",
                      "relatedEvidence": Array [],
                      "stimulus": "**Lead-in:** No lead-in

**Stimulus:** G3.T2. Excerpt from one of the Sources 

**Stems:**
-   Source \\\\#1 says &#60quote&#62 . Click on [**one**/**two**] sentence(s) in Source \\\\#2 below that **best** [supports/support] this [idea/detail].

**Clarifications:** The stem should appear above the text not after it.",
                      "taskDesc": "The student will locate sentences that present supporting information for the source quote given in the stem.

The **delimited text** should be an excerpt from one of the sources. There should be six sentences that are delimited; however, regardless of the number of answer options and correct responses, the correct responses must equal less than half of the total answer options.

The **correct answer choice(s)** should be sentences that clearly provide supporting information for the quote given in the stem. If there are too many defensible options (check every possibility) do not use this item type, use multiple-choice.

**Distractors** are the delimited sentences that should reflect common student errors. Plausible distractors for this model might include: 1) a sentence that is on topic but does not present supporting information for the source quote found in the stem and/or 2) a sentence that contains the same wording as the source quote given in the stem but does not present supporting information.

**Rationales** should state the justification for why the plausible distractor is incorrect. Provide rationales for all distractors in the delimited text.",
                      "taskName": "Task Model 2",
                    },
                  ],
                  "title": "English Language Arts Performance Task Specification: Grade 3 Informational Writing",
                  "tools": "Word processing tools, including spell check",
                  "vocab": "this is a vocab",
                },
              ],
              "title": "English Language Arts Performance Task Specification: Grade 3 Informational Writing",
            }
          }
          taskModels={
            Array [
              Object {
                "examples": "Scoring Rules",
                "relatedEvidence": Array [],
                "stimulus": "**Lead-in:** No lead-in

**Stimulus:** No additional stimulus

**Stems:**
-   Source \\\\#1 discusses &#60topic&#62 . Explain how the information in Source \\\\#2 adds to the reader’s understanding of &#60topic&#62 . Give **two** [details/examples] from Source \\\\#2 to support your explanation.

-   The sources discuss &#60topic&#62 . Explain what the sources say about &#60topic&#62 . Use **one** detail from each source to support your explanation. For each detail, include the source title or number.",
                "taskDesc": "NA",
                "taskName": "Task Model 1",
              },
              Object {
                "examples": "Stimulus Information",
                "relatedEvidence": Array [],
                "stimulus": "**Lead-in:** No lead-in

**Stimulus:** G3.T2. Excerpt from one of the Sources 

**Stems:**
-   Source \\\\#1 says &#60quote&#62 . Click on [**one**/**two**] sentence(s) in Source \\\\#2 below that **best** [supports/support] this [idea/detail].

**Clarifications:** The stem should appear above the text not after it.",
                "taskDesc": "The student will locate sentences that present supporting information for the source quote given in the stem.

The **delimited text** should be an excerpt from one of the sources. There should be six sentences that are delimited; however, regardless of the number of answer options and correct responses, the correct responses must equal less than half of the total answer options.

The **correct answer choice(s)** should be sentences that clearly provide supporting information for the quote given in the stem. If there are too many defensible options (check every possibility) do not use this item type, use multiple-choice.

**Distractors** are the delimited sentences that should reflect common student errors. Plausible distractors for this model might include: 1) a sentence that is on topic but does not present supporting information for the source quote found in the stem and/or 2) a sentence that contains the same wording as the source quote given in the stem but does not present supporting information.

**Rationales** should state the justification for why the plausible distractor is incorrect. Provide rationales for all distractors in the delimited text.",
                "taskName": "Task Model 2",
              },
            ]
          }
        />
      </DOCUMENT>
    }
    filename="testFile"
  >
    <Component />
  </Component>
</div>
`;

exports[`PDFLink component render function returns a download icon when not loading 1`] = `
<Component>
  <div
    className="download"
  >
    <Download
      color="currentColor"
      size="24"
    >
      <svg
        fill="none"
        height="24"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
        />
        <polyline
          points="7 10 12 15 17 10"
        />
        <line
          x1="12"
          x2="12"
          y1="15"
          y2="3"
        />
      </svg>
    </Download>
    <p>
      Download PDF
    </p>
    <style
      jsx={true}
    >
      
      .download {
        font-family: 'PT Sans Caption', sans-serif;
        display: flex;
        flex-direction: column;
        align-items: center;
      }

      p {
        margin-top: 0.5em;
      }
    
    </style>
  </div>
</Component>
`;

exports[`PDFLink component render function returns a loading icon while loading 1`] = `
<Component>
  <div
    className="loading-container"
  >
    <div
      className="loader"
    >
      <Loader
        color="currentColor"
        size="24"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="12"
            x2="12"
            y1="2"
            y2="6"
          />
          <line
            x1="12"
            x2="12"
            y1="18"
            y2="22"
          />
          <line
            x1="4.93"
            x2="7.76"
            y1="4.93"
            y2="7.76"
          />
          <line
            x1="16.24"
            x2="19.07"
            y1="16.24"
            y2="19.07"
          />
          <line
            x1="2"
            x2="6"
            y1="12"
            y2="12"
          />
          <line
            x1="18"
            x2="22"
            y1="12"
            y2="12"
          />
          <line
            x1="4.93"
            x2="7.76"
            y1="19.07"
            y2="16.24"
          />
          <line
            x1="16.24"
            x2="19.07"
            y1="7.76"
            y2="4.93"
          />
        </svg>
      </Loader>
    </div>
    <div
      className="message"
    >
      <p>
        Loading
      </p>
    </div>
    <style
      jsx={true}
    >
      
      p {
        margin-top: 0.5em;
      }

      .loading-container {
        font-family: 'PT Sans Caption', sans-serif;
        display: flex;
        align-items: center;
        flex-direction: column;
      }

      .loader {
        display: flex;
        align-items: center;
        animation: spin 1s linear infinite;
      }

      @keyframes spin {
        100% {
          transform: rotate(360deg);
        }
      }
    
    </style>
  </div>
</Component>
`;
